2007-09-29  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* term/Postscript/prologue.ps: Add an explicit 'closepath' before
	filling a rectangle. This is not required by the language spec, but
	works around a bug in Adobe Distiller 7 and Apple's Quartz Preview.
	Bug #1771533

2007-09-28  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save:
	Update to include latest demos

2007-09-28  Hanno Hoffstadt  <hannoh@users.sourceforge.net>

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot):  It is necessary
	to call term->previous_palette() at the end of any 2D plot or 3D plot
	that used custom rgb colors.
	Bug #1803337

2007-09-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c src/set.c(set_encoding) src/show.c(show_encoding)
	src/gplt_x11.c:

	Add "utf8" to the list of options accepted by "set encoding".
	Modify "show encoding" to report the current environmental locale as
	well as the encoding that gnuplot thinks it is using. Resolving any
	conflict is left to the user.

	Most terminal drivers need take no special action if the encoding is
	UTF-8. PostScript is a major exception.  It is also useful for the
	libgd-based terminals if you want to force UTF-8 encoding lookup in
	the Adobe Symbol font. This patchset implements the command itself.
	Actual libgd and PostScript support will be added separately.

2007-09-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/mouse.c (do_save_3dplot): If the log scale setting has changed
	for any axis, we must do a full replot rather than a shortcut during
	mouse-driven rotation.  This is equivalent to the replot instead of
	refresh code used for zooming, so we can use the same flag (refresh_ok)
	to test for it.
	Bug #1797500

2007-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics): On log scale plots with very large range,
	the minitic interval can overflow integer representation.
	Bug #1797500
